--- a/publications.html
+++ b/publications.html
@@ -10,15 +10,15 @@
             </div>
         </div>        
         <div class="row">
-            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" style="background-color:#bfa588">
+            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" >
                 <a href="./publications/call-beyond.php">
                     <img src="./img/call-beyond.jpg">The Call Beyond</a>
             </div>            
-            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" style="background-color:#bfa588">
+            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" >
                 <a href="http://www.sriaurobindoashram.net/Shri-Aurobind-Karmdhara.html">
                     <img src="./img/karamdhara.jpg">श्री अरविन्द कर्मधारा</a>
             </div>
-            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" style="background-color:#bfa588">
+            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-4" >
                 <a href="http://www.sriaurobindoashram.net/Realization.html">
                     <img src="./img/realization.jpg">Realization Newsletter</a>
             </div>
