--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
                         <img src="./img/call-beyond.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a href="./publications/call-beyond.php" target="_blank">The Call Beyond</a></h3>
+                <h3 class="fs-5"><a text-decoration="none"; href="./publications/call-beyond.php" target="_blank">The Call Beyond</a></h3>
             </div>
 
             <div class="col">
@@ -29,7 +29,7 @@
                         <img src="./img/karamdhara.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a href="./publications/karamdhara.php" target="_blank">श्री अरविन्द कर्मधारा</a></h3>
+                <h3 class="fs-5"><a text-decoration="none"; href="./publications/karamdhara.php" target="_blank">श्री अरविन्द कर्मधारा</a></h3>
             </div>
             <div class="col">
 
@@ -38,7 +38,7 @@
                         <img src="./img/realization.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a href="./publications/realization.php" target="_blank">Realization Newsletter</a></h3>
+                <h3 class="fs-5"><a text-decoration="none"; href="./publications/realization.php" target="_blank">Realization Newsletter</a></h3>
             </div>
         </div>
     </div>
