--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,7 @@
                     </a>
                 </div>
                 <h3 class="fs-5"><a text-decoration="none"; href="./publications/call-beyond.php" target="_blank">The Call Beyond</a></h3>
+                   
             </div>
 
             <div class="col">
@@ -39,6 +40,11 @@
                     </a>
                 </div>
                 <h3 class="fs-5"><a text-decoration="none"; href="./publications/realization.php" target="_blank">Realization Newsletter</a></h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <a href="/publications/subscribe.php" class="btn btn-lg btn-primary">Subscribe</a>
             </div>
         </div>
     </div>
