--- a/publications.html
+++ b/publications.html
@@ -12,8 +12,8 @@
                         <img src="./img/call-beyond.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a text-decoration="none"; href="./publications/call-beyond.php" target="_blank">The Call Beyond</a></h3>
-                   
+                <h3 class="fs-5"><a text-decoration="none" ; href="./publications/call-beyond.php" target="_blank">The Call Beyond</a></h3>
+
             </div>
 
             <div class="col">
@@ -22,7 +22,7 @@
                         <img src="./img/karamdhara.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a text-decoration="none"; href="./publications/karamdhara.php" target="_blank">श्री अरविन्द कर्मधारा</a></h3>
+                <h3 class="fs-5"><a text-decoration="none" ; href="./publications/karamdhara.php" target="_blank">श्री अरविन्द कर्मधारा</a></h3>
             </div>
             <div class="col">
 
@@ -31,12 +31,13 @@
                         <img src="./img/realization.jpg">
                     </a>
                 </div>
-                <h3 class="fs-5"><a text-decoration="none"; href="./publications/realization.php" target="_blank">Realization Newsletter</a></h3>
+                <h3 class="fs-5"><a text-decoration="none" ; href="./publications/realization.php" target="_blank">Realization Newsletter</a></h3>
             </div>
         </div>
         <div class="row">
             <div class="col text-center">
-                <a href="/publications/subscribe.php" class="btn btn-lg btn-primary">Subscribe</a>
+                <!-- <a href="/publications/subscribe.php" class="btn btn-lg btn-primary">Subscribe</a> -->
+                <a href="/publications/subscribe.php" class="btn btn-lg btn-primary"><i class="fas fa-edit"></i>&nbsp;Subscribe</a>
             </div>
         </div>
     </div>
