--- a/publications.html
+++ b/publications.html
@@ -5,8 +5,8 @@
                 <h3>Online Publications</h3>
             </div>
         </div>
-        <div class="row gx-5">
-            <div class="col">
+        <div class="row">
+            <div class="col-sm-12 col-md-4">
                 <div class="sa-img mb-4" style="height: 320px;">
                     <a href="./publications/call-beyond.php" target="_blank">
                         <img src="./img/call-beyond.jpg">
@@ -16,7 +16,7 @@
 
             </div>
 
-            <div class="col">
+            <div class="col-sm-12 col-md-4">
                 <div class="sa-img mb-4" style="height: 320px;">
                     <a href="./publications/karamdhara.php">
                         <img src="./img/karamdhara.jpg">
@@ -24,7 +24,7 @@
                 </div>
                 <h3 class="fs-5"><a text-decoration="none" ; href="./publications/karamdhara.php" target="_blank">श्री अरविन्द कर्मधारा</a></h3>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-4">
 
                 <div class="sa-img mb-4" style="height: 320px;">
                     <a href="./publications/realization.php">
